# rose-offline-client

./: .gitignore  .kilocodeignore  AGENTS.md  Cargo.toml  QWEN.md  README.md  SKILL.md  SUN_DOCUMENTATION.md  bevy 0.11 to 0.12 migration guide.txt  bevy 0.12 to 0.13 migration guide.txt  bevy_0_15_wgsl_shders.md  build_output.txt  cargo_check_output.txt  cargo_check_output2.txt  cargo_check_output3.txt  cargo_check_output4.txt  cargo_check_output5.txt  compilation_errors.txt  current_compilation_errors.txt  debug_messages.txt  errors.txt  filter_logs.ps1  filter_logs.py  full_output.txt  gemini-bevy-0.16-feature-investigation.md  gemini_analysis.md  ghosting_analysis.md  latest_errors.txt  output.txt  parse_logs.py  pitfalls.md  server_migration_proposals.md  sky_stars_issues_analysis.md  ui-button-fix-attempts.md
.continue/agents/: new-config.yaml
.kilo/plans/: 1775226123987-happy-pixel.md
.kilocode/: MEMORY_BANK.md  mcp.json  query-qdrant.py
.kilocode/rules/: bevy-links.md  rules.md
.roo/: mcp.json
docs/: SUN_DOCUMENTATION.md  bevy-0.16-troubleshooting-guide.md  bevy-0.18-code-review-progress.md  black-screen-diagnostic-protocol.md  black-screen-diagnostics-camera-visibility.md  black-screen-diagnostics-gpu-assets.md  black-screen-diagnostics-index.md  black-screen-diagnostics-mmorpg-loading.md  black-screen-diagnostics-render-pipeline.md  black-screen-diagnostics-wgpu-surface.md  comprehensive-codebase-review-report.md  diagnostic-summary.md  how-to-run-game.md  llm-troubleshooting-guide.md  logging-system-architecture.md  map-editor-architecture.md  name-tag-bevy-0.16-vs-0.18-analysis.md  procedural-cloud-system-architecture.md  render-pipelines-materials.md  renderdoc-guide.md  rose-online-asset-documentation.md  server-authority-audit-and-migration-plan.md
logs/2026-03-02_14-04-30/: session.json  structured.jsonl
logs/2026-03-02_14-25-51/: session.json  structured.jsonl
pitfalls/: blood-effects.md  damage-digits-not-showing.md  index.md  lighting.md  materials-transparency.md  model-viewer.md  name-tag-blurry-fonts.md  networking.md  performance-memory.md  rendering-camera.md  skill-bar-ui.md  terrain-physics.md  ui-layered-alpha-artifacts.md  water-system.md  zone-loading.md
plans/: atmospheric-scattering-implementation.md  bevy-0.15-to-0.16-migration.md  bevy-0.16-to-0.18-upgrade-plan.md  bevy-hanabi-effect-system-integration-plan.md  bevy-hanabi-feasibility-analysis.md  bird-system-architecture.md  black-screen-resolution-plan.md  blood-effect-system.md  character-blink-reimplementation.md  chat-bubble-architecture.md  chat-bubble-troubleshooting.md  disabled-features-analysis.md  evening-night-shadow-solution.md  feature-upgrades-tracking.md  graphics-settings-architecture.md  graphics-upgrades-report.md  irradiance-volumes-evaluation.md  map-editor-fixes-tracking.md  map-editor-zone-viewer-analysis.md  map-editor-zone-viewer-integration.md  map-ui-rework-plan.md  material-rendering-fix-plan.md  monster-collision-system.md  multi-task-fixes-tracking.md  name-tag-chat-bubble-fix-analysis.md  name-tag-chat-bubble-fix-attempts.md  name-tag-chat-bubble-fix.md  nested-option-analysis-report.md  night-sky-ghosting-analysis.md  particle-quality-fix-plan.md  player-spawning-fix-analysis.md  procedural-grass-debugging.md  procedural-grass-integration-plan.md  procedural-water-system-architecture.md  quest-scroll-architecture.md  realistic-terrain-enhancement-plan.md  render-simplification-resolution-plan.md  rendering-extraction-failure-resolution-updated.md  rendering-extraction-failure-resolution.md  sailing-system-implementation-tracking.md  (+20 more)
src/: blood_effect_plugin.rs  dds_image_loader.rs  effect_loader.rs  exe_resource_loader.rs  lib.rs  loader.rs  main.rs  model_loader.rs  test_widget_discriminants.rs  types.rs  vfs_asset_io.rs  zms_asset_loader.rs  zone_loader.rs
src/animation/: animation_state.rs  camera_animation.rs  mesh_animation.rs  mod.rs  skeletal_animation.rs  transform_animation.rs  zmo_asset_loader.rs  zmo_asset_loader_fixed.rs
src/audio/: audio_source.rs  global_sound.rs  mod.rs  monster_sound_cap.rs  ogg.rs  spatial_sound.rs  wav.rs
src/bundles/: ability_values.rs
src/components/: angelic_wings.rs  bank.rs  bird.rs  blink_clip.rs  blood_effect.rs  boat.rs  chat_bubble.rs  collision.rs  command.rs  dirt_dash_effect.rs  fish.rs  flight.rs  item_drop_timer.rs  mod.rs  monster_separation.rs  name_tag_entity.rs  season.rs  skinned_mesh_target_bone.rs  skinning_target.rs  wind_effect.rs  zone_object.rs
src/debug/: mod.rs  renderdoc.rs
src/diagnostics/: mod.rs  render_diagnostics.rs  skinned_mesh_diagnostics.rs
src/events/: bank_event.rs  blood_effect_event.rs  boat_event.rs  character_select_event.rs  chat_bubble_event.rs  chatbox_event.rs  clan_dialog_event.rs  client_entity_event.rs  conversation_dialog_event.rs  flight_event.rs  game_connection_event.rs  hit_event.rs  login_event.rs  message_box_event.rs  mod.rs  move_destination_effect_event.rs  move_speed_event.rs  network_event.rs  npc_store_event.rs  number_input_dialog_event.rs  party_event.rs  personal_store_event.rs  ping_event.rs  player_command_event.rs  quest_scroll_event.rs  quest_trigger_event.rs  spawn_effect_event.rs  spawn_projectile_event.rs  system_func_event.rs  use_item_event.rs  world_connection_event.rs  zone_event.rs
src/graphics/: apply_systems.rs  graphics_settings.rs  mod.rs
src/logging/: json_format.rs  mod.rs
src/map_editor/: components.rs  mod.rs  resources.rs
src/render/: cloud_material.rs  custom_mesh_pipeline.rs  damage_digit_material.rs  damage_digit_pipeline.rs  effect_mesh_extension.rs  effect_mesh_material.rs  extension_material_plugin.rs  mod.rs  object_material.rs  object_material_extension.rs  (+20 more)
system-architecture/: Animation.md  Assets.md  Audio.md  Camera.md  ECS.md  Input.md  Lighting.md  Physics.md  README.md  Render.md  Transform.md  UI.md  Window.md  admin-menu-skill-learn-feature.md  blood-effect-system.md  chat-bubble-and-name-tag-architecture.md  flying-system-architecture.md  sky_stars_architecture.md  zone_lighting.md
(+248 files in other folders)
