[package]
name = "rose-offline-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.4"
arrayvec = "0.7"
async-trait = "0.1"
bevy_egui = "0.24"
bevy-inspector-egui = "0.22"

bevy_rapier3d = "0.24"
bitflags = "2.3"
bytemuck = { version = "1.7.0", features = [ "derive" ] }
chrono = "0.4"
clap = "3.2"
cpal = "0.15"
crossbeam-channel = "0.5"
directories = "5.0"
dolly = "0.4.2"
egui = "0.22"
egui_extras = "0.22"
enum-map = { version = "2.0", features = [ "serde" ] }
glam = "0.24.1"
hound = "3.4"
image = { version = "0.24", default-features = false, features = [ "dds", "ico", "tga" ] }
lazy_static = "1.4.0"
lewton = "0.10"
log = "0.4.14"
futures-io = "0.3"
md5 = "0.7.0"
num-derive = "0.4"
num-traits = "0.2"
oddio = "0.6"
pelite = "0.10.0"
rand = "0.8"
serde = "1.0"
thiserror = "1.0"
tokio = { version = "1.17", features = [ "rt", "net", "sync", "macros", "io-util" ] }
toml = "0.7.2"
quick-xml = { version = "0.26.0", features = [ "serialize" ] }
regex = "1"
rose-data = { path = "../rose-offline/rose-data" }
rose-data-irose = { path = "../rose-offline/rose-data-irose" }
rose-file-readers = { path = "../rose-offline/rose-file-readers" }
rose-game-common = { path = "../rose-offline/rose-game-common" }
rose-game-irose = { path = "../rose-offline/rose-game-irose" }
rose-network-common = { path = "../rose-offline/rose-network-common" }
rose-network-irose = { path = "../rose-offline/rose-network-irose" }


[dependencies.bevy]
version = "0.12"
features = [
  "bevy_asset",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "multi-threaded",
  "dds",
  "tga",
  "x11",
  "dynamic_linking",
]
default-features = false

