[package]
name = "rose-offline-client"
version = "0.1.0"
edition = "2021"

[dependencies]
accesskit = "0.17"
anyhow = "1.0.4"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
arrayvec = "0.7"
async-trait = "0.1"
bevy_egui = "0.34"
bevy-inspector-egui = "0.33"
bevy_rapier3d = "0.31"
bitflags = "2.3"
bytemuck = { version = "1.7.0", features = [ "derive" ] }
chrono = "0.4"
clap = "3.2"
cpal = "0.15"
crossbeam-channel = "0.5"
dashmap = "5.5"
directories = "5.0"
encase = "0.8"
dolly = "0.6.0"
egui = "0.31"
egui_extras = "0.31"
enum-map = { version = "2.0", features = ["serde"] }
glam = "0.29"
hound = "3.4"
image = { version = "0.24", default-features = false, features = [ "dds", "ico", "tga", "png", "jpeg" ] }
lazy_static = "1.4.0"
lewton = "0.10"
lru = "0.12"
log = "0.4.14"
futures-io = "0.3"
md5 = "0.7.0"
mint = "0.5"
num-derive = "0.4"
num-traits = "0.2"
oddio = "0.6"
pelite = "0.10.0"
rand = "0.8"
serde = "1.0"
thiserror = "1.0"
tokio = { version = "1.17", features = [ "rt", "net", "sync", "macros", "io-util" ] }
toml = "0.7.2"
uuid = "1"
quick-xml = { version = "0.26.0", features = ["serialize"] }
regex = "1"
renderdoc = "0.11"
rose-data = { path = "C:/Users/vicha/RustroverProjects/rose-offline/rose-data" }
rose-data-irose = { path = "C:/Users/vicha/RustroverProjects/rose-offline/rose-data-irose" }
rose-file-readers = { path = "C:/Users/vicha/RustroverProjects/rose-offline/rose-file-readers" }
rose-game-common = { path = "C:/Users/vicha/RustroverProjects/rose-offline/rose-game-common" }
rose-game-irose = { path = "C:/Users/vicha/RustroverProjects/rose-offline/rose-game-irose" }
rose-network-common = { path = "C:/Users/vicha/RustroverProjects/rose-offline/rose-network-common" }
rose-network-irose = { path = "C:/Users/vicha/RustroverProjects/rose-offline/rose-network-irose" }

[dependencies.bevy]
version = "0.16"
default-features = false
features = [
    "std",
    "async_executor",
    "bevy_log",            # Required for logging macros in Bevy 0.16
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "multi_threaded",
    "tga",
    "x11",
    "bevy_gizmos",
    # Profiling features - uncomment the ones you need:
    # "trace_tracy",        # Enable Tracy profiler integration for CPU profiling
    # "trace_tracy_memory", # Enable memory allocation tracking (high overhead)
    # "trace_chrome",       # Export to Chrome tracing format (alternative to Tracy)
]

# To use memory profiling with Tracy:
# 1. Install Tracy profiler from: https://github.com/wolfpld/tracy/releases
# 2. Uncomment the trace_tracy and trace_tracy_memory features above
# 3. Build with: cargo build
# 4. Run the Tracy profiler and click 'Connect' to wait for the app
# 5. Run your app - memory allocations will be tracked in real-time
# 6. Look for the 'Zone Info' window to see allocations during each span
# 
# For command-line capture (less overhead):
#   tracy-capture -o my_capture.tracy
#   (then run your app)



[profile.dev.package."*"]
opt-level = 3
